# kinematics-explorer

./: pyproject.toml
config/: .model.cfg.swp  .model.cfg.un~  model.cfg
kinematics_explorer/: .feria_template.in.swp  .modeling.py.swp  .modeling.py.un~  feria_template.in  modeling.py
