[tool.poetry]
name = "kinematics-explorer"
version = "0.1.0"
description = ""
authors = ["Fernando Olguin <f.olguin.ch@gmail.com>"]
readme = "README.md"
packages = [{include = "kinematics_explorer"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
